fix lỗi người xử lý đầu tiên đc phép nhập ô text và lưu khi hình thức ký là OTP

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -192,8 +192,8 @@
                 [firstHandler] = "firstHandler"
               >
               </app-image-sign-contract>
-              <div *ngIf="!this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient) ? d.name : ''}}</div>
-              <div *ngIf="d.sign_unit != 'text' && !this.flagFocus && !this.otpValueSign" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient) ? d.recipient?.name : ''}}</div>
+              <div *ngIf="d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient) ? d.recipient?.name : ''}}</div>
+              <div *ngIf="d.sign_unit != 'text' && !this.flagFocus" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient) ? d.recipient?.name : ''}}</div>
             </div>
           </div>
           <div class="skeleton-sign position-absolute opacity-0">
@@ -310,6 +310,8 @@
     [pageBefore]="pageBefore"
     [status]="status"
     (submitChanges)="submitEvents($event)"
+    [firstHandler] = "firstHandler"
+    [confirmConsider] = "confirmConsider"
   ></app-footer-signature>
   <ngx-spinner
     bdColor="rgba(51,51,51,0.8)"
