Fix tạo tài khoản sso phương thức đăng nhập

--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -21,9 +21,13 @@
                     <div *ngIf="id == null" class="input-data">
                         <input type="text" formControlName="email">
                     </div>
-                    <div *ngIf="id != null" class="input-data hidden-color">
+                    <!-- <div *ngIf="id != null" class="input-data hidden-color">
                         <input type="text" formControlName="email" readonly class="hidden-color">
+                    </div> -->
+                    <div *ngIf="id != null" class="input-data hidden-color">
+                      <input type="text" formControlName="email" readonly class="hidden-color">
                     </div>
+
                     <div *ngIf="submitted && f.email.errors" class="invalid">
                         <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
                         <div *ngIf="f.email.errors.email">{{'error.user.email.format' | translate}}</div>
@@ -91,7 +95,7 @@
             </div> -->
             <div class="row" style="justify-content: flex-start;padding-top: 10px;display: flex;">
               <div style="display: flex;">
-                <!-- <div style="display: flex;">
+                <div style="display: flex;">
                   <span>{{'choose.type.sign' | translate}}:</span>
                   <div style="margin-left: 10px;">
                     <input type="radio" name="confirm-radio-consider" value="EMAIL" formControlName="login_type" name="login_type">
@@ -105,10 +109,10 @@
                     <input type="radio" name="confirm-radio-consider" value="EMAIL_AND_SDT" formControlName="login_type" name="login_type">
                     <span> {{'type.sign.email.phone' | translate}}</span>
                   </div>
-                </div> -->
+                </div>
 
-                <!-- <div style="display: flex; margin-left: 35px;"> -->
-                <div style="display: flex;">
+                <div style="display: flex; margin-left: 35px;">
+                <!-- <div style="display: flex;"> -->
                   <span>{{'status.account' | translate}}:</span>
                   <div style="margin-left: 20px;">
                     <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
