--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -16,22 +16,38 @@
             </div>
         </div>
     
-        <!-- Tài liệu -->
+        <!-- Tìm kiếm Tài liệu -->
         <div class="col-xxl-2-5 col-lg-4 col-md-6">
             <div>{{'contract.information' | translate}}</div>
             <div class="input-line">
                 <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="{{'search.code.number.name' | translate}}" />
             </div>
         </div>
-    
+      
         <!-- Ngày tạo tài liệu -->
         <div class="col-xxl-2-5 col-lg-4 col-md-6">
-            <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
+            <div>{{ 'create-date' | translate }} <span style="color: red"> *</span></div>
             <div class="input-line">
-                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+              <p-calendar #calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true"
+                dateFormat="dd/mm/yy">
+              </p-calendar>
             </div>
         </div>
-    
+        <!-- <div class="date_dropdown">
+            <p-dropdown [options]="dateOptions" [autoDisplayFirst]="false" [(ngModel)]="selectedOption"
+              (onChange)="changeDateRange(selectedOption)"style="width: 15px;">
+            </p-dropdown>
+        </div> -->
+          
+        <!-- Ngày hoàn thành tài liệu -->
+        <div class="col-xxl-2-5 col-lg-4 col-md-6">
+            <div>{{ 'completed-date' | translate}} </div>
+            <div class="input-line">
+                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="completionDate" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+   
+            </div>
+        </div>
+
         <!-- Trạng thái -->
         <div class="col-xxl-2-5 col-lg-4 col-md-6">
             <div>{{'contract.status' | translate}}</div>
@@ -105,7 +121,7 @@
                       <td class="row-word">{{this.convertTime(list.createdAt)}}</td>
                       <td class="row-word">{{this.convertTime(list.signTime)}}</td>
                       <td class="row-word">{{this.convertStatus(list.status.toLowerCase())}}</td>
-
+                      <td class="row-word">{{this.convertTime(list.signTime)}}</td>
                       <!-- <td *ngIf="list.status == 'CANCEL'" class="row-word">{{this.convertTime(list.cancelDate)}}</td>
                       <td *ngIf="list.status != 'CANCEL'" class="row-word">{{this.convertTime(list.updatedAt)}}</td> -->
 
