--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -28,11 +28,17 @@
           <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
           <div class="input-line">
               <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
-
               ></p-calendar>
           </div>
       </div>
 
+       <!-- Ngày hoàn thành tài liệu -->
+       <div class="col-xxl-2 col-lg-4 col-md-6">
+        <div>{{ 'completed-date' | translate}} </div>
+        <div class="input-line">
+            <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="completionDate" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+        </div>
+      </div>
       <!--Trạng thái-->
       <div class="col-xxl-2 col-lg-4 col-md-6">
           <div>{{'contract.status' | translate}}</div>
@@ -104,6 +110,7 @@
                             </span>
                         </td>
                         <td>{{this.convert(list.status)}}</td>
+                        <td class="row-word">{{this.convertTime(list.createdAt)}}</td>
                         <td>{{list.processedUser}}</td>
                         <td>{{list.processingUser}}</td>
                         <td>{{list.notProcessedYet}}</td>
