"Commented out a div element with a radio button for refusing a signature in consider-contract.component.html"

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -285,10 +285,10 @@
               <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature'>
               <label for="radio-confirm-secretary" class="ms-2">{{'btn.accept' | translate}}</label>
             </div>
-            <div class="radio-refuse">
+            <!-- <div class="radio-refuse">
               <input id="radio-refuse-secretary" type="radio" name='confirm-radio-secretary' [value]="2" [(ngModel)]='confirmSignature'>
               <label for="radio-refuse-secretary" class="ms-2">{{'btn.not.accept' | translate}}</label>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
