--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.scss
@@ -40,7 +40,17 @@
     }
   }
 }
-
+.cancel-button{
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #8B8B8B;
+  font-size: 13px;
+  margin: 0 10px;
+}
 .image-sign-acc {
   width: 100%;
   display: flex;
@@ -57,7 +67,12 @@
   align-items: center;
   height: 42vh;
 }
-
+.input-checkbox{
+  text-align: left;
+  width: 16px;
+  height: 16px;
+  margin: 5px;
+}
 .select-signature-acc {
   width: 30%;
 }
