fix: update file name step4 create contract

--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -4,9 +4,9 @@
     <div>
         <div class="row mt-8px">
             <div class="col-md-12">
-                <div class="label_item">{{'contract.file.name' | translate}}</div>
+                <div class="label_item">{{'contract.name' | translate}}</div>
                 <div class="content-input mt-6px hover-item">
-                    <div [innerHTML]="this.datas.file_name"></div>
+                    <div [innerHTML]="this.datas.name"></div>
                 </div>
             </div>
         </div>
