fix mất file.connect

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -45,7 +45,7 @@
               <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'file.connect' | translate}}:</div>
                 <div class="custom-xl-width-col-xl-9 col-lg-12 mt-lg-5px">
                   <div *ngFor="let d of datas?.is_data_contract?.refs;let i = index" style="margin-right: 5px;" class="content-info-contract">
-                    <a class="info-contract" rel="stylesheet" [href]="d.path" target="_blank" (click)="openPdf(d.path, $event)">{{d.filename}}</a>
+                    <a class="info-contract" rel="stylesheet" [href]="d.path" target="_blank" (click)="openPdf(d.path, $event)">{{d.ref_name}}</a>
                 </div>
               </div>
             </div>   
